--- a/styles.css
+++ b/styles.css
@@ -11,11 +11,17 @@ button {
     border-color:black;
 }
 
-table {
-    border: 50px solid black;
+.bg {
+    background-color: black;
   }
 
 
 td {
   border: 5px solid black;
+}
+
+#box {
+    border: 2px solid black;
+    background-color: rgb(86, 151, 255);
+    color: white
 }
